# OpenStream

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
openstream/: __init__.py  app.py  config.py  database.py  models.py  passwords.py  updater.py
openstream/routes/: api.py  auth.py  pages.py  stream.py
openstream/scanner/: filesystem.py  metadata.py  tasks.py  thumbnails.py
openstream/static/css/: style.css
openstream/static/js/: app.js  player.js  scan.js
openstream/templates/: about.html  base.html  detail.html  home.html  library.html  login.html  player.html  scan_progress.html  settings.html
openstream/templates/partials/: _media_card.html  _nav.html
openstream/transcoder/: ffprobe.py  hls.py  profiles.py  session.py
