[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openstream"
version = "0.1.5"
description = "A Python media server with web UI, transcoding, and TMDB metadata"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.1",
    "bcrypt>=4.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["openstream*"]

[project.scripts]
openstream = "openstream.app:run"
